--- a/src/sys-admin/feed-profile-page/adminProfile.css
+++ b/src/sys-admin/feed-profile-page/adminProfile.css
@@ -101,7 +101,7 @@ main .container .post-cont .form-cont {
 }
 main .container .post-cont .user-post-cont {
   overflow-y: scroll;
-  height: 88vh;
+  height: 80vh;
   width: 710px;
   margin-top: 12px;
 }
@@ -228,4 +228,86 @@ main .container .shopinfo-cont .shopinfo button {
 main .container .shopinfo-cont .shopinfo button:hover {
   opacity: 80%;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+main .container .busi-info-popup, main .container .account-popup {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: 99999;
+  background-color: rgba(0, 0, 0, 0.575);
+}
+main .container .busi-info-popup .busi-info-popup-form, main .container .busi-info-popup .account-popup-form, main .container .account-popup .busi-info-popup-form, main .container .account-popup .account-popup-form {
+  height: 100vh;
+  width: 400px;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  background-color: #f2e5db;
+}
+main .container .busi-info-popup .busi-info-popup-form .popup-header, main .container .busi-info-popup .account-popup-form .popup-header, main .container .account-popup .busi-info-popup-form .popup-header, main .container .account-popup .account-popup-form .popup-header {
+  display: flex;
+  align-items: flex-start;
+  border-bottom: 2px solid #a8896c;
+  flex-direction: column;
+}
+main .container .busi-info-popup .busi-info-popup-form .popup-header .exit-button, main .container .busi-info-popup .account-popup-form .popup-header .exit-button, main .container .account-popup .busi-info-popup-form .popup-header .exit-button, main .container .account-popup .account-popup-form .popup-header .exit-button {
+  display: flex;
+  align-items: center;
+  height: 50px;
+  background-color: #a8896c;
+  color: #ffffff;
+  width: 400px;
+  justify-content: baseline;
+  border: 2px solid #a8896c;
+}
+main .container .busi-info-popup .busi-info-popup-form .popup-header .exit-button button, main .container .busi-info-popup .account-popup-form .popup-header .exit-button button, main .container .account-popup .busi-info-popup-form .popup-header .exit-button button, main .container .account-popup .account-popup-form .popup-header .exit-button button {
+  cursor: pointer;
+  margin: 0 10px 0 10px;
+  background-color: #a8896c;
+  border: none;
+}
+main .container .busi-info-popup .busi-info-popup-form .popup-header .exit-button h2, main .container .busi-info-popup .account-popup-form .popup-header .exit-button h2, main .container .account-popup .busi-info-popup-form .popup-header .exit-button h2, main .container .account-popup .account-popup-form .popup-header .exit-button h2 {
+  font-weight: 400;
+}
+main .container .busi-info-popup .busi-info-popup-form .popup-header .busi-info-content, main .container .busi-info-popup .busi-info-popup-form .popup-header .account-content, main .container .busi-info-popup .account-popup-form .popup-header .busi-info-content, main .container .busi-info-popup .account-popup-form .popup-header .account-content, main .container .account-popup .busi-info-popup-form .popup-header .busi-info-content, main .container .account-popup .busi-info-popup-form .popup-header .account-content, main .container .account-popup .account-popup-form .popup-header .busi-info-content, main .container .account-popup .account-popup-form .popup-header .account-content {
+  width: 400px;
+  height: 600px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+main .container .busi-info-popup .busi-info-popup-form .popup-header .busi-info-content img, main .container .busi-info-popup .busi-info-popup-form .popup-header .account-content img, main .container .busi-info-popup .account-popup-form .popup-header .busi-info-content img, main .container .busi-info-popup .account-popup-form .popup-header .account-content img, main .container .account-popup .busi-info-popup-form .popup-header .busi-info-content img, main .container .account-popup .busi-info-popup-form .popup-header .account-content img, main .container .account-popup .account-popup-form .popup-header .busi-info-content img, main .container .account-popup .account-popup-form .popup-header .account-content img {
+  border-radius: 50%;
+}
+main .container .busi-info-popup .busi-info-popup-form .popup-header .busi-info-content div, main .container .busi-info-popup .busi-info-popup-form .popup-header .account-content div, main .container .busi-info-popup .account-popup-form .popup-header .busi-info-content div, main .container .busi-info-popup .account-popup-form .popup-header .account-content div, main .container .account-popup .busi-info-popup-form .popup-header .busi-info-content div, main .container .account-popup .busi-info-popup-form .popup-header .account-content div, main .container .account-popup .account-popup-form .popup-header .busi-info-content div, main .container .account-popup .account-popup-form .popup-header .account-content div {
+  display: flex;
+  flex-direction: column;
+  margin-left: -100px;
+  margin-bottom: 10px;
+  color: #a8896c;
+}
+main .container .busi-info-popup .busi-info-popup-form .popup-header .busi-info-content div input, main .container .busi-info-popup .busi-info-popup-form .popup-header .account-content div input, main .container .busi-info-popup .account-popup-form .popup-header .busi-info-content div input, main .container .busi-info-popup .account-popup-form .popup-header .account-content div input, main .container .account-popup .busi-info-popup-form .popup-header .busi-info-content div input, main .container .account-popup .busi-info-popup-form .popup-header .account-content div input, main .container .account-popup .account-popup-form .popup-header .busi-info-content div input, main .container .account-popup .account-popup-form .popup-header .account-content div input {
+  padding: 5px 8px;
+  width: 155%;
+  display: inline-block;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+  background-color: #ffffff;
+  font-family: "Poppins", sans-serif;
+}
+main .container .busi-info-popup .busi-info-popup-form .popup-header .busi-info-content div input:focus, main .container .busi-info-popup .busi-info-popup-form .popup-header .account-content div input:focus, main .container .busi-info-popup .account-popup-form .popup-header .busi-info-content div input:focus, main .container .busi-info-popup .account-popup-form .popup-header .account-content div input:focus, main .container .account-popup .busi-info-popup-form .popup-header .busi-info-content div input:focus, main .container .account-popup .busi-info-popup-form .popup-header .account-content div input:focus, main .container .account-popup .account-popup-form .popup-header .busi-info-content div input:focus, main .container .account-popup .account-popup-form .popup-header .account-content div input:focus {
+  outline: none;
+}
+main .container .busi-info-popup .busi-info-popup-form .popup-header .busi-info-content div .submit, main .container .busi-info-popup .busi-info-popup-form .popup-header .account-content div .submit, main .container .busi-info-popup .account-popup-form .popup-header .busi-info-content div .submit, main .container .busi-info-popup .account-popup-form .popup-header .account-content div .submit, main .container .account-popup .busi-info-popup-form .popup-header .busi-info-content div .submit, main .container .account-popup .busi-info-popup-form .popup-header .account-content div .submit, main .container .account-popup .account-popup-form .popup-header .busi-info-content div .submit, main .container .account-popup .account-popup-form .popup-header .account-content div .submit {
+  background-color: #a8896c;
+  color: #ffffff;
+  cursor: pointer;
+}
+main .container .busi-info-popup .busi-info-popup-form .popup-header .busi-info-content div .submit:hover, main .container .busi-info-popup .busi-info-popup-form .popup-header .account-content div .submit:hover, main .container .busi-info-popup .account-popup-form .popup-header .busi-info-content div .submit:hover, main .container .busi-info-popup .account-popup-form .popup-header .account-content div .submit:hover, main .container .account-popup .busi-info-popup-form .popup-header .busi-info-content div .submit:hover, main .container .account-popup .busi-info-popup-form .popup-header .account-content div .submit:hover, main .container .account-popup .account-popup-form .popup-header .busi-info-content div .submit:hover, main .container .account-popup .account-popup-form .popup-header .account-content div .submit:hover {
+  opacity: 80%;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
 }/*# sourceMappingURL=adminProfile.css.map */
