--- a/src/sys-admin/feed-profile-page/adminProfile.scss
+++ b/src/sys-admin/feed-profile-page/adminProfile.scss
@@ -32,7 +32,7 @@ main {
 
             .user-post-cont {
                 overflow-y: scroll;
-                height: 88vh;
+                height: 80vh;
                 width: 710px;
                 margin-top: 12px;
 
@@ -185,6 +185,101 @@ main {
                     }
                 }
             }
+        }
+
+        .busi-info-popup, .account-popup {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100vh;
+            z-index: 99999;
+            background-color: rgba(0, 0, 0, 0.575);
+
+            .busi-info-popup-form, .account-popup-form {
+                height: 100vh;
+                width: 400px;
+                margin: auto;
+                display: flex;
+                justify-content: center;
+                background-color: $divider-color;
+
+                .popup-header {
+                    display: flex;
+                    align-items:flex-start;
+                    border-bottom: 2px solid $header-color;
+                    flex-direction: column;
+                    
+                    .exit-button {
+                        @include flexBox();
+                        height: 50px;
+                        background-color: $header-color;
+                        color: $white-color;
+                        width: 400px;
+                        justify-content: baseline;
+                        border: 2px solid $header-color;
+
+                        button {
+                            cursor: pointer;
+                            margin: 0 10px 0 10px;
+                            background-color: $header-color;
+                            border: none;
+                        }
+
+                        h2 {
+                            font-weight: 400;
+                        }
+                    }
+
+                    .busi-info-content, .account-content {
+                        width: 400px;
+                        height: 600px;
+                        @include flexBox();
+                        justify-content: center;
+                        flex-direction: column;
+
+                        img {
+                            border-radius: 50%;
+                        }
+
+                        div {
+                            display: flex;
+                            flex-direction: column;
+                            margin-left: -100px;
+                            margin-bottom: 10px;
+                            color: $header-color;
+                            
+
+                            input {
+                                padding: 5px 8px;
+                                width: 155%;
+                                display: inline-block;
+                                border: 1px solid #ccc;
+                                box-sizing: border-box;
+                                background-color: $white-color;
+                                font-family: $font-family;
+
+                                &:focus {
+                                    outline: none;
+                                }
+                            }
+
+                            .submit {
+                                background-color: $header-color;
+                                color: $white-color;
+                                cursor: pointer;
+
+                                &:hover {
+                                    opacity: 80%;
+                                    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+
         }
     }
 }
