--- a/src/sys-user/product-search/product-search.scss
+++ b/src/sys-user/product-search/product-search.scss
@@ -78,8 +78,20 @@ main {
                             justify-content: center;
                         }
 
-                        h3, p {
+                        .pname {
+                            width: 140px;
+                            padding: 5px;
+                            overflow: hidden;
+
+                            h4 {
+                                white-space: nowrap;
+                            }
+                        }
+
+                        p {
                             margin-top: 10px;
+                            white-space: nowrap;
+                            font-size: .8rem;
                         }
                     }
                 }
