--- a/src/sys-user/getproduct-page/get-product.css
+++ b/src/sys-user/getproduct-page/get-product.css
@@ -88,12 +88,12 @@ main .container {
   justify-content: center;
 }
 main .container .product-cont {
-  width: 740px;
+  width: 430px;
   height: 90vh;
 }
-main .container .product-cont .search-back {
+main .container .product-cont .prod-back {
   margin-top: 10px;
-  width: 710px;
+  width: 420px;
   height: 40px;
   background-color: #a8896c;
   display: flex;
@@ -102,12 +102,73 @@ main .container .product-cont .search-back {
   color: #ffffff;
   box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
 }
-main .container .product-cont .search-back a {
+main .container .product-cont .prod-back a {
   margin: 5px 20px 0 20px;
 }
 main .container .product-cont .product {
-  overflow-y: scroll;
-  height: 80vh;
-  width: 710px;
+  height: 75vh;
+  width: 420px;
   margin-top: 12px;
+  background-color: #f2e5db;
+  overflow-y: scroll;
+  box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+}
+main .container .product-cont .product .prod-img {
+  width: 400px;
+  height: 400px;
+  border: 20px solid #f2e5db;
+  background-color: #ffffff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+}
+main .container .product-cont .product .p-name-price {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 20px 10px 20px;
+  border-bottom: 2px solid #ffffff;
+  color: #a8896c;
+}
+main .container .product-cont .product .p-name-price div {
+  width: 50%;
+}
+main .container .product-cont .product .p-name-price .p {
+  text-align: right;
+}
+main .container .product-cont .product .des-size {
+  padding: 20px 20px 10px 20px;
+  color: #a8896c;
+}
+main .container .product-cont .product .des-size .descrip, main .container .product-cont .product .des-size .size, main .container .product-cont .product .des-size .category {
+  padding: 10px 0;
+}
+main .container .product-cont .product .des-size .descrip p, main .container .product-cont .product .des-size .size p, main .container .product-cont .product .des-size .category p {
+  font-size: 0.9rem;
+}
+main .container .product-cont .checkout {
+  margin-top: 5px;
+  width: 420px;
+  height: 50px;
+  background-color: #a8896c;
+  box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+main .container .product-cont .checkout button {
+  font-family: "Poppins", sans-serif;
+  cursor: pointer;
+  width: 200px;
+  height: 40px;
+  border-radius: 5px;
+  background-color: #f5ece3;
+  color: #a8896c;
+  border: none;
+  font-weight: 600;
+}
+main .container .product-cont .checkout button:hover {
+  opacity: 80%;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
 }/*# sourceMappingURL=get-product.css.map */
