--- a/src/sys-user/getproduct-page/get-product.scss
+++ b/src/sys-user/getproduct-page/get-product.scss
@@ -20,12 +20,12 @@ main {
         justify-content: center;
 
         .product-cont {
-            width: 740px;
+            width: 430px;
             height: 90vh;
 
-            .search-back {
+            .prod-back {
                 margin-top: 10px;
-                width: 710px;
+                width: 420px;
                 height: 40px;
                 background-color: $header-color;
                 @include flexBox();
@@ -40,11 +40,77 @@ main {
             }
 
             .product {
-                overflow-y: scroll;
-                height: 80vh;
-                width: 710px;
+                height: 75vh;
+                width: 420px;
                 margin-top: 12px;
+                background-color: $divider-color;
+                overflow-y: scroll;
+                box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
                 
+                .prod-img {
+                    width: 400px;
+                    height: 400px;
+                    border: 20px solid $divider-color;
+                    background-color: $white-color;
+                    @include flexBox();
+                    justify-content: center;
+                    overflow: hidden;
+                }
+
+                .p-name-price {
+                    @include flexBox();
+                    justify-content: space-between;
+                    padding: 0 20px 10px 20px;
+                    border-bottom: 2px solid $white-color;
+                    color: $header-color;
+
+                    div {
+                        width: 50%;
+                    }
+
+                    .p {
+                        text-align: right;
+                    }
+                }
+
+                .des-size {
+                    padding: 20px 20px 10px 20px;
+                    color: $header-color;
+
+                    .descrip, .size, .category {
+                        padding: 10px 0;
+                        p {
+                            font-size: .9rem;
+                        }
+                    }
+                }
+            }
+
+            .checkout {
+                margin-top: 5px;
+                width: 420px;
+                height: 50px;
+                background-color: $header-color;
+                box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+                @include flexBox();
+                justify-content: space-evenly;
+                
+                button {
+                    font-family: $font-family;
+                    cursor: pointer;
+                    width: 200px;
+                    height: 40px;
+                    border-radius: 5px;
+                    background-color: $loginbg-color;
+                    color: $header-color;
+                    border: none;
+                    font-weight: 600;
+
+                    &:hover {
+                        opacity: 80%;
+                        box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+                    }
+                }
             }
         }
     }
