--- a/src/sys-admin/feed-profile-page/adminProfile.css
+++ b/src/sys-admin/feed-profile-page/adminProfile.css
@@ -109,6 +109,7 @@ main .container .post-cont .user-post-cont .user-post {
   width: 690px;
   background-color: #f2e5db;
   border-radius: 10px;
+  margin-bottom: 10px;
 }
 main .container .post-cont .user-post-cont .user-post .pp-name-date {
   display: flex;
@@ -120,6 +121,10 @@ main .container .post-cont .user-post-cont .user-post .pp-name-date .pp-name {
   margin: 10px 0 15px 20px;
   display: flex;
   align-items: center;
+}
+main .container .post-cont .user-post-cont .user-post .pp-name-date .pp-name img {
+  border-radius: 50%;
+  border: 2px solid #a8896c;
 }
 main .container .post-cont .user-post-cont .user-post .pp-name-date .pp-name h2 {
   margin-left: 10px;
