--- a/src/sys-user/myprofile-page/userProfile.scss
+++ b/src/sys-user/myprofile-page/userProfile.scss
@@ -65,12 +65,13 @@ main {
 
             .user-post-cont {
                 overflow-y: scroll;
-                height: 65vh;
+                height: 63vh;
                 width: 710px;
                 margin-top: 12px;
 
                 .user-post {
                     width: 690px;
+                    margin-bottom: 10px;
                     background-color: $divider-color;
                     border-radius: 10px;
 
@@ -82,6 +83,11 @@ main {
                         .pp-name {
                             margin: 10px 0 15px 20px;
                             @include flexBox();
+
+                            img {
+                                border-radius: 50%;
+                                border: 2px solid $header-color;
+                            }
 
                             h2 {
                                 margin-left: 10px;
@@ -173,7 +179,7 @@ main {
 
             .shopinfo {
                 width: 380px;
-                height: 83vh;
+                height: 78vh;
                 color: $header-color;
                 background-color: $divider-color;
                 box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px;
@@ -199,6 +205,7 @@ main {
 
                 p {
                     margin-left: 30px;
+                    font-size: .8rem;
                 }
 
                 button {
