--- a/src/sys-user/message-page/userMessage.scss
+++ b/src/sys-user/message-page/userMessage.scss
@@ -50,6 +50,10 @@ main {
                 border-left: 3px solid $divider-color;  
                 border-right: 3px solid $divider-color; 
                 box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 5px 0px, rgba(0, 0, 0, 0.1) 0px 0px 1px 0px; 
+            
+                .message {
+                    
+                }
             }
 
             .message-input {
