--- a/src/sys-user/product-search/product-search.css
+++ b/src/sys-user/product-search/product-search.css
@@ -40,6 +40,9 @@ header .app-name a img {
   border-radius: 50%;
   margin-right: 10px;
 }
+header .app-name a h1 {
+  font-size: 1.7rem;
+}
 header nav {
   width: 50%;
   text-align: right;
@@ -50,6 +53,7 @@ header nav a {
   color: #ffffff;
   font-size: 1rem;
   font-weight: 400;
+  font-size: 0.8rem;
 }
 header nav a:hover {
   border-bottom: 3px solid #ffffff;
